--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">fakeInsta</string>
+    <string name="do.comment">نظر دهید ...</string>
+    <string name="account">حساب کاربری</string>
+    <string name="login">ورود به حساب</string>
+    <string name="logout">خروج از حساب</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">ایمیل</string>
+    <string name="prompt_password">پسورد</string>
+    <string name="action_sign_in">ورود</string>
+    <string name="invalid_email">This email address is invalid</string>
+    <string name="invalid_password">Password is too short</string>
+    <string name="incorrect_password">Password is incorrect</string>
+    <string name="field_required">This field is required</string>
 </resources>
